--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="./css/styles.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,17 +18,17 @@
 
     <header class="container-fluid">
       <nav class="navbar navbar-expand-lg navbar-light">
-        <a href="/index.html" class="navbar-brand"><h1 class="header__etiquetas">ETIQUETAS</h1></a>
+        <a href="./index.html" class="navbar-brand"><h1 class="header__etiquetas">ETIQUETAS</h1></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#toggleMobileMenu" aria-controls="#toggleMobileMenu" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="toggleMobileMenu">
           <ul class="navbar-nav ms-auto text-center nav_list">
             <li>
-              <a class="nav_list activo" href="/index.html" class="nav-link">INICIO</a>
+              <a class="nav_list activo" href="./index.html" class="nav-link">INICIO</a>
             </li>
             <li>
-              <a class="nav_list" href="/html/contacto.html" class="nav-link">CONTACTANOS</a>
+              <a class="nav_list" href="./html/contacto.html" class="nav-link">CONTACTANOS</a>
             </li>
           </ul>
         </div>
@@ -45,10 +45,10 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="/images/envios-todo-el-pais-2.png" class="d-block w-100" alt="Fotos del negocio">
+            <img src="./images/envios-todo-el-pais-2.png" class="d-block w-100" alt="Fotos del negocio">
           </div>
           <div class="carousel-item">
-            <img src="/images/envios-todo-el-pais.png" class="d-block w-100" alt="Fotos del negocio">
+            <img src="./images/envios-todo-el-pais.png" class="d-block w-100" alt="Fotos del negocio">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -68,33 +68,33 @@
       <div class="row">
         <div class="col-lg-4 col-md-4 col-sm-12 card__productos">
             <div class="card" style="width: 18rem;">
-                <img src="/images/unnamed.jpg" class="card-img-top" alt="Imagen ilustrativa de etiquetas de cuero">
+                <img src="./images/unnamed.jpg" class="card-img-top" alt="Imagen ilustrativa de etiquetas de cuero">
                 <div class="card-body card-body--niños">
                   <p class="card-title">ETIQUETAS</p>
                   <p class="card-text">Para más información</p>
-                  <a href="./html/productos.html" class="btn botonCard">Ver más</a>
+                  <a href="#" class="btn botonCard">Ver más</a>
                 </div>
             </div>
         </div>
 
         <div class="col-lg-4 col-md-4 col-sm-12 card__productos">
             <div class="card" style="width: 18rem;">
-                <img src="/images/unnamed.jpg" class="card-img-top" alt="Imagen ilustrativa de etiquetas de cuero">
+                <img src="./images/unnamed.jpg" class="card-img-top" alt="Imagen ilustrativa de etiquetas de cuero">
                 <div class="card-body card-body--niñas">
                   <p class="card-title">ETIQUETAS</p>
                   <p class="card-text">Para más información</p>
-                  <a href="./html/productos.html" class="btn botonCard">Ver más</a>
+                  <a href="#" class="btn botonCard">Ver más</a>
                 </div>
             </div>
         </div>
 
         <div class="col-lg-4 col-md-4 col-sm-12 card__productos">
             <div class="card" style="width: 18rem;">
-                <img src="/images/unnamed.jpg" class="card-img-top" alt="Imagen ilustrativa de etiquetas de cuero">
+                <img src="./images/unnamed.jpg" class="card-img-top" alt="Imagen ilustrativa de etiquetas de cuero">
                 <div class="card-body card-body--bebes">
                   <p class="card-title">ETIQUETAS</p>
                   <p class="card-text">Para más información</p>
-                  <a href="./html/productos.html" class="btn botonCard">Ver más</a>
+                  <a href="#" class="btn botonCard">Ver más</a>
                 </div>
             </div>
         </div>  
